charts/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/lognet: "true"
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MYSQL_ALLOW_EMPTY_PASSWORD
              name: variables-env
        - name: SUPERVISOR_DBHOST
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_DBHOST
              name: variables-env
        - name: SUPERVISOR_DBNAME
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_DBNAME
              name: variables-env
        - name: SUPERVISOR_DBPASS
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_DBPASS
              name: variables-env
        - name: SUPERVISOR_DBPORT
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_DBPORT
              name: variables-env
        - name: SUPERVISOR_DBUSER
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_DBUSER
              name: variables-env
        - name: SUPERVISOR_INTERVAL
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_INTERVAL
              name: variables-env
        - name: SUPERVISOR_LISTENPORT
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_LISTENPORT
              name: variables-env
        - name: SUPERVISOR_NIVELTRAZA
          valueFrom:
            configMapKeyRef:
              key: SUPERVISOR_NIVELTRAZA
              name: variables-env
        image: database
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - /usr/bin/mysql --user=root --database=dbDatabase --execute "SELECT *
              FROM webresponse;"
          failureThreshold: 10
          periodSeconds: 30
          timeoutSeconds: 3
        name: kcdb-c
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/initDB.sql
          name: database-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-claim0
        persistentVolumeClaim:
          claimName: database-claim0
status: {}
