charts/lognet-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: lognet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/lognet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/lognet: "true"
